--- a/texFiles/2.4_positionprior.tex
+++ b/texFiles/2.4_positionprior.tex
@@ -51,11 +51,12 @@
 % do we need to explain why we are only using the NW relic not the SE
 % relic?
 We demonstrate that despite significant uncertainty in the time
-evolution of the shock, we can still break the degeneracy of the
+evolution of the shock, we can compute the likelihood of the
 outgoing and incoming merger scenarios by comparing the observed and the
 simulated position of the radio relic.
 The key to the success of this method lies our ability in estimating the
-upper and lower bounds on the possible position of the relic. The
+time evolution of the relic velocity, which gives the upper and lower
+bounds on the possible position of the relic for each scenario. The
 uncertainty of the time evolution of the velocity of the shock stem from
 how the velocity depends on a number of physical quantities, including the
 local gravitational potential, matter density, temperature, pressure among
@@ -78,9 +79,10 @@ drop only slightly with time. We estimated the upper and lower bounds of the
 time-averaged velocity ($\langle v_{relic} \rangle$) of the shock between
 the collision of the subclusters and the observed time as:  
 \begin{equation}
-	\frac{(v_{3D}(t_{obs}) + v_{3D}(t_{col}))}{2}	< \langle v_{relic} \rangle \lesssim v_{3D}(t_{col}) 
+	\beta ~v_{3D}(t_{col}) < \langle v_{relic} \rangle \lesssim v_{3D}(t_{col}) 
 \end{equation}
-where $v_{3D}(t_{col}) < 0 $ for the incoming scenario. 
+where $0 < \beta < 1.0$ is a factor that we introduce to denote a slow-down
+of the relic. 
 For the outgoing situation, the lower bound is set to be the average speed
 of the NW subcluster since the relic is observed to have traveled further
 away than the NW subcluster from the center of mass. The upper bound can be
