--- a/texFiles/3.2_TSC.tex
+++ b/texFiles/3.2_TSC.tex
@@ -4,14 +4,19 @@ the time-since-collision, with $TSC_0 = \giga \text{yr}$ and $TSC_1 = \giga
 depression in the X-ray surface brightness shown in M11, strongly suggest
 that El Gordo is a post-collision system. 
 Based on section \ref{sec: positionprior}, we have come up with an estimate for the
-likely position based on the two inferred TSC. 
+likely position of the NW radio relic based on the two inferred TSC. 
 We summarize the realizations for the two possible scenarios with the
 polarization prior applied in Figure \ref{fig: positionprior}, while we
 leave the results from the default prior in Appendix \ref{app: merger_scenarios}.
+The green and blue distributions on upper panel of Figure \ref{fig:
+positionprior} denoted the lower bound for the location of the NW
+subcluster. 
+While on the lower panel of Figure \ref{fig: positionprior}, the blue and
+green curves denote the approximate upper bound on the location of the
+relic. After taking into the uncertainty in the time evolution of the velocities,
+the position of the observed relic favors the outgoing scenario.  
 
-
-After taking into this uncertainty, the possible locations of the relic
-still favors the outgoing scenario. (See figure \ref{fig: positionprior}) Other
+Other
 uncertainties arise from how we define the reference frame for the calculation. The
 uncertainty associated with the two centroids are of the order
 of $\sim 0.1 \mega$pc \citep{Jee13} and are relatively unimportant???.  
