fixed figures and added them to paper

--- a/texFiles/2.4_positionprior.tex
+++ b/texFiles/2.4_positionprior.tex
@@ -69,46 +69,44 @@ that, right after the collision of the subclusters, the shock speed is
 comparable to the merger speed of the two subclusters in the center of mass
 frame.  While \citet{Paul2011b} reports the shock speed decreases only
 slightly as it propagates away from the center of mass, the Bullet shock
-speed mildly drops by only $\sim 14\%$ in the 300~\mega yr period after the
+speed mildly drops by $\sim 14\%$ in the 300~\mega yr period after the
 formation of the Bullet shock versus a $\sim65\%$ drop for the main
-subcluster, which was slowed down by gravity. \par 
+subcluster. \par  
 We approximated the upper and lower bounds of the NW relic speed with the
 simulated speeds of the NW subcluster.  We simplified the calculation by
 working in the center of mass frame where the shock speed is expected to
-drop only slightly with time. We estimated the upper and lower bounds of the
-time-averaged velocity ($\langle v_{relic} \rangle$) of the shock between
-the collision of the subclusters and the observed time as:  
-\begin{equation}
-	\beta ~v_{3D}(t_{col}) < \langle v_{relic} \rangle \lesssim v_{3D}(t_{col}) 
-\end{equation}
-where $0 < \beta < 1.0$ is a factor that we introduce to denote a slow-down
-of the relic. 
-For the outgoing situation, the lower bound is set to be the average speed
-of the NW subcluster since the relic is observed to have traveled further
-away than the NW subcluster from the center of mass. The upper bound can be
-approximated as the collisional speed of the NW subclusters due to how the
-shock is powered by the collision. We base this physical picture on the
-fact that shock is a pressure wave and does not experience gravitational
-deceleration while some dissipative processes may have slowed down the shock wave slightly. It is unlikely that there
-would be significant energy injected into the shock to speed up the shock
-such that the shock travels much faster than the collision speed of the
-subcluster.
+drop slightly with time. 
+The projected separation of the shock is approximated as:
 \begin{equation}
 	s_{proj} = \langle v_{relic} \rangle (\hat{t}_{obs} - \hat{t}_{col}) \cos(\hat{\alpha})
 \end{equation}
-where $s_{proj}$ is the bound projected separation. 
-We compare the bounds with the observed position of the NW relic from
-\citet{L13} at RA = 01:02:46, DEC = -49:14:43 \citep{L13}.
+where $s_{proj}$ is the estimated projected separation and we estimated the upper and lower bounds of the
+$\langle v_{relic} \rangle$ of the shock between
+the collision of the subclusters and the observed time as:  
+\begin{equation}
+	\beta~v_{3D}(t_{col}) < \langle v_{relic} \rangle \lesssim v_{3D}(t_{col}) 
+\end{equation}
+where $0 < \beta < 1.0$ is a factor that we introduce to denote the slow-down
+of the relic. The upper bound can be approximated as the collisional speed of the NW
+subclusters due to how the shock is powered by the collision. The shock is
+a pressure wave and does not experience gravitational deceleration, while
+some dissipative processes may have slowed down the shock wave slightly as
+it propogates. It is unlikely that there would be significant energy
+injected into the shock to speed up the shock such that the shock travels
+much faster than the collision speed of the subcluster. 
+
+We compare the bounds with the observed position of the NW relic  at RA = 01:02:46, DEC = -49:14:43 \citep{L13}.
 Three sources of radio relic
 were identified - including the NW, SE and the E relic. The NW radio
 relic possesses the most extended geometry among all the identified relic source. 
 We do not refer to the The SE nor the E radio relic in this calculation
 since we do not have an estimation of the shock speed of the SE relic
-nor the E relic from \citealt{L13} as a comparison case.    
+nor the E relic from \citealt{L13} for comparison.    
 From \citet{L13}, the estimated speed of the NW relic is $4300 \pm
 ^{800}_{500}\kilo\meter~\second^{-1}$. This speed is compatible with our
-simulated collisional speed but the conversion of frame of reference is
-non-trivial since the speed is measured with respect to on the turbulent intercluster gas.
+simulated collisional speed but the conversion of the frame of reference is
+non-trivial since the speed is measured with respect to on the turbulent
+intercluster gas as a Mach number.
 
 
 %We incorporate the calculated shock speed of the radio relic as part of
