--- a/texFiles/3.2_TSC.tex
+++ b/texFiles/3.2_TSC.tex
@@ -23,9 +23,9 @@ of $\sim 0.1 \mega$pc \citep{Jee13} and are relatively unimportant???.
 
 \begin{figure}
 	\includegraphics[width=\linewidth]{polar_prior_bounds.pdf}
-	\caption{Position of the radio relic based on the estimated minimum
-	velocities (upper figure) and the estimated maximum velocities (lower
-	figure) \label{fig: positionprior}}
+	\caption{ Comparison of the observed position of the relic (red) with the
+	predicted position from the two simulated merger scenarios (blue for
+	outgoing and green for the incoming scenario). \label{fig: positionprior}}
 \end{figure}
 
 
