--- a/texFiles/app_c_result_plots.tex
+++ b/texFiles/app_c_result_plots.tex
@@ -1,1 +1,7 @@
 %make use of subplots from matplotlib in order to plot all the posteriors
+\begin{figure}
+	\includegraphics[width=\linewidth]{default_prior_bounds.pdf}
+	\caption{Comparison of the observed position of the relic with the
+	predicted position from the two simulated merger scenarios.
+	\label{defaultprior_bounds}}
+\end{figure}
