drafted discussion of TSC

--- a/texFiles/1_intro.tex
+++ b/texFiles/1_intro.tex
@@ -33,7 +33,13 @@ van Weeren 2011a suggests that the double radio relic can provide clue to
 collisional parameters ???
 \textbf{Ever since the discovery of El Gordo in the Atacama Camera Telescope (ACT)
 survey (REF), there is an ongoing effort for collecting comprehensive data
-for El Gordo.} From the spectroscopy and Dressler-Schecter test for the member galaxies  in Sif\'{o}n et al. (2013), El Gordo is confirmed to be a binary merger 
+for El Gordo.}
+The presence of the radio relic, in
+conjunction with a depression in the X-ray surface brightness shown in M11,
+strongly suggest that El Gordo is a post-collision system so we limit our
+discussion to inferring the time-since-collision. 
+
+From the spectroscopy and Dressler-Schecter test for the member galaxies  in Sif\'{o}n et al. (2013), El Gordo is confirmed to be a binary merger 
 without significant substructures. This picture is further supported by the
 weak lensing analysis by Jee et al. (2013). The weak lensing analysis shows
 a mass ratio of 2:1  between the two main subclusters, named according to their location as the northeast (NW) and southeast (SE) subclusters respectively. 
