--- a/texFiles/2.4_positionprior.tex
+++ b/texFiles/2.4_positionprior.tex
@@ -51,7 +51,7 @@
 % do we need to explain why we are only using the NW relic not the SE
 % relic?
 We demonstrate that despite significant uncertainty in the time
-evolution of the shock, we can compute the likelihood of the
+evolution of the shock, we can give constraints on the likelihood of the
 outgoing and incoming merger scenarios by comparing the observed and the
 simulated position of the radio relic.
 The key to the success of this method lies our ability in estimating the
@@ -80,20 +80,25 @@ The projected separation of the shock is approximated as:
 \begin{equation}
 	s_{proj} = \langle v_{relic} \rangle (\hat{t}_{obs} - \hat{t}_{col}) \cos(\hat{\alpha})
 \end{equation}
-where $s_{proj}$ is the estimated projected separation and we estimated the upper and lower bounds of the
+where $s_{proj}$ is the estimated projected separation and we estimated the
+upper and lower bounds of the time-averaged velocity
 $\langle v_{relic} \rangle$ of the shock between
 the collision of the subclusters and the observed time as:  
 \begin{equation}
-	\beta~v_{3D}(t_{col}) < \langle v_{relic} \rangle \lesssim v_{3D}(t_{col}) 
+	\beta~v_{3D,1}(t_{col}) < \langle v_{relic} \rangle \lesssim v_{3D,1}(t_{col}) 
 \end{equation}
 where $0 < \beta < 1.0$ is a factor that we introduce to denote the slow-down
-of the relic. The upper bound can be approximated as the collisional speed of the NW
-subclusters due to how the shock is powered by the collision. The shock is
-a pressure wave and does not experience gravitational deceleration, while
-some dissipative processes may have slowed down the shock wave slightly as
-it propogates. It is unlikely that there would be significant energy
-injected into the shock to speed up the shock such that the shock travels
-much faster than the collision speed of the subcluster. 
+of the relic and $v_{3D,1}(t_{col})$ refers to the collisional velocity of
+the NW relic in the center-of-mass frame. The upper bound can be
+approximated as the collisional speed of the NW subclusters due to how the
+shock is powered by the collision. After the collision, it is unlikely that
+there would be significant energy injected into the shock to speed up the shock such that
+the shock travels much faster than the collision speed of the subcluster. 
+While the shock does not experience gravitational deceleration as a
+pressure wave, some dissipative processes may have slowed down the shock
+wave slightly as it propagates. By making use of a
+range of $\beta$ values, we examine the how the rate of slow down would
+give a different lower bound of the projeted separation of the relic.   
 
 We compare the bounds with the observed position of the NW relic  at RA = 01:02:46, DEC = -49:14:43 \citep{L13}.
 Three sources of radio relic
