--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -151,20 +151,6 @@ luminosity peaks.
 
 %----------------------------------------------------------------------
 \section{RESULTS} 
-\begin{figure} 
-	\includegraphics[width =\linewidth]{elGordoTSCwithBullet_revC.png}
-	\caption{The marginalized time-since-collision (TSC) vs 3D
-velocities ($v_{3D}$) of El Gordo and the Bullet Cluster. (to add
-descriptions of the different filters used) }
-\end{figure}
-
-\begin{figure}
-	\includegraphics[width=\linewidth]{TSC_0_vs_v_3d_col_histplot2d_combine2.png}
-	\caption{The marginalized output PDF of the time-since-collision
-(TSC$_0$) vs. the 3D velocity at the time of collision for El Gordo. (to
-add more description about contours) }
-	\label{fig:TSC_v3D}
-\end{figure}
 
 %-----------------------------------------------------------------------
 \subsection{Relative merger speed}
@@ -250,10 +236,8 @@ of the merger scenario.
 \section{DETAILS AND TESTS FOR THE MCMC MASS INFERENCE}\label{app:MCMC}
 \input{app_b_MCMC}
 
-\section{RESULT PLOTS OF MONTE CARLO SIMULATION} \label{app: plots}
+\section{RESULT PLOTS OF MONTE CARLO SIMULATION}
 \input{app_c_result_plots}
-\subsection{Plots for distinguishing the two merger scenarios}
-\label{app: merger_scenarios}
 
 \bsp 
 \label{lastpage} 
