--- a/texFiles/app_c_result_plots.tex
+++ b/texFiles/app_c_result_plots.tex
@@ -1,7 +1,9 @@
 %make use of subplots from matplotlib in order to plot all the posteriors
+\label{app: results}
 \begin{figure}
-	\includegraphics[width=\linewidth]{default_prior_bounds.pdf}
+	\includegraphics[width=\linewidth]{polar_prior_bounds.pdf}
 	\caption{Comparison of the observed position of the relic with the
-	predicted position from the two simulated merger scenarios.
-	\label{defaultprior_bounds}}
+	predicted position from the two simulated merger scenarios, with
+	polarization prior applied to the PDFs.
+	\label{polarprior_bounds}}
 \end{figure}
