added to TSC result section, updated readme

--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -168,7 +168,7 @@ luminosity peaks.
 %	errorbars are.)}
 %\end{figure}
 
-\subsection{Effects of applied prior on parameters}
+\subsection{Effects of applied prior on output variables}
 \input{3.3_sens_analysis}
 
 
@@ -178,19 +178,18 @@ luminosity peaks.
 
 
 %-----------------------------------------------------------------------
+\subsection{Three-dimensional (3D) configuration of El Gordo}
+\input{3.4_3D_config}
+
 \section{DISCUSSION}
 %-----------------------------------------------------------------------
-
-\subsection{Three-dimensional (3D) configuration of El Gordo}
-\input{4.1_3D_config}
-
 \subsection{Our finding in the context of other studies of El Gordo}
 \input{4.2_other_studies}
 
 \subsection{Comparison to other merger clusters of galaxies}
 \input{4.3_comparison_merger}
 
-\subsection{Uncertainties of the radio relic prior}
+\subsection{Possible improvements for the radio relic prior}
 \input{4.4_uncertainties_radio_prior}
 
 \subsection{Limitations of our model and future work} 
@@ -230,13 +229,13 @@ of the merger scenario.
 
 \appendix
 
-\section{BAYESIAN FORMALISM OF DAWSON'S MONTE CARLO SIMULATION}
-\input{app_a_MCMAC_stat_formalism}
+%\section{BAYESIAN FORMALISM OF DAWSON'S MONTE CARLO SIMULATION}
+%\input{app_a_MCMAC_stat_formalism}
 
-\section{DETAILS AND TESTS FOR THE MCMC MASS INFERENCE}\label{app:MCMC}
+\section{DETAILS AND OUTPUT DIAGNOSTICS FOR THE MCMC MASS INFERENCE}\label{app:MCMC}
 \input{app_b_MCMC}
 
-\section{RESULT PLOTS OF MONTE CARLO SIMULATION}
+\section{PLOTS OF OUTPUTS OF THE MONTE CARLO SIMULATION}
 \input{app_c_result_plots}
 
 \bsp 
